# prayer-app

./: .gitignore  README.md  readme.md
infra/: README.md  build-server.sh  prayer-app-server.service  prayer-app.tk  privacy-policy.html
mobile/: App.tsx  README.md  app.json  generate-version.sh  package.json  publish.sh  tsconfig.json
mobile/.expo-shared/: assets.json
mobile/app/: Main.tsx  PrayerList.tsx  SettingsScreen.tsx  version.json
mobile/app/components/: AppText.tsx  Background.tsx  Button.tsx  LocalText.tsx
mobile/app/screen/: AllList.tsx  FavoriteList.tsx  Home.tsx  ListItemsComponents.tsx  Prayer.tsx  PrayerEdit.tsx  PrayerList.tsx  SettingsScreen.tsx
mobile/app/utils/: Colors.tsx  PrayerStorage.tsx  PrayerStore.tsx  Prayers.tsx  Storage.tsx  Store.tsx  Utils.tsx
mobile/assets/translations/: en.json  sk.json
prayers/: aa-slovak.json  all.json  sa-english-g-d.json  sa-english.json  sa-slovak.json
server/: Dockerfile  README.md  build-server.sh  server.cabal
server/src/: Main.hs
web/: Main.elm  README.md  Utils.elm  build-web.sh  elm.json  index.html  main.elm  main.js  model.elm  prayerEdit.elm  prayerList.elm  utils.elm
